--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -90,7 +90,7 @@
                 background-color: purple;
             }
             &:nth-child(4){
-                background-color: orangered;
+                background-color: #0A1929;
             }
         }
     }
