--- a/src/components/widgets/widgets.scss
+++ b/src/components/widgets/widgets.scss
@@ -47,9 +47,10 @@
         .icon{
             font-size: 18px;
             padding: 5px;
-            background-color: rgba(128,0,128,0.541);
-            color: #fff;
+            // background-color: rgba(128,0,128,0.541);
+            // color: #fff;
             border-radius: 5px;
+            align-self: flex-end;
         }
     }
 }
