--- a/src/components/featured/featured.scss
+++ b/src/components/featured/featured.scss
@@ -1,81 +1,79 @@
-.featured{
+.featured {
     flex: 2;
-    border-radius: 10px;
-    padding: 10px;
-    -webkit-box-shadow: 2px 4px 10px 1px rgba(0,0,0,0.47);
+    -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
     box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
-
-    .top{
-        display: flex;
+    padding: 10px;
+  
+    .top {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      color: gray;
+  
+      .title {
+        font-size: 16px;
+        font-weight: 500;
+      }
+    }
+  
+    .bottom {
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 15px;
+  
+      .featuredChart {
+        width: 100px;
+        height: 100px;
+      }
+  
+      .title {
+        font-weight: 500;
+        color: gray;
+      }
+  
+      .amount {
+        font-size: 30px;
+      }
+  
+      .desc {
+        font-weight: 300;
+        font-size: 12px;
+        color: gray;
+        text-align: center;
+      }
+  
+      .summary {
         width: 100%;
+        display: flex;
         align-items: center;
         justify-content: space-between;
-        color: gray;
-
-        .more{
-            font-size: medium;
-            align-items: center;
-        }
-    }
-
-    .bottom{
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 15px;
-
-        .featuredChart{
-            width: 100px;
-            height: 100px;
-        }
-
-        .title{
-            font-weight: 500;
+  
+        .item {
+          text-align: center;
+  
+          .itemTitle {
+            font-size: 14px;
             color: gray;
-        }
-
-        .amount{
-            font-size: 30px;
-        }
-
-        .desc{
-            font-weight: 300;
-            font-size: 12px;
-            color: gray;
-            text-align: center;
-        }
-
-        .summary{
-            width: 100%;
+          }
+  
+          .itemResult {
             display: flex;
             align-items: center;
-            justify-content: space-between;
-
-            .item{
-                text-align: center;
-
-                .itemTitle{
-                    font-size: 14px;
-                    color: gray;
-                }
-
-                .itemResult{
-                    display: flex;
-                    align-items: center;
-                    margin-top: 10px;
-                    font-size: 14px;
-
-                    &.positive{
-                        color: green;
-                    }
-
-                    &.negative{
-                        color: red;
-                    }
-                }
+            margin-top: 10px;
+            font-size: 14px;
+  
+            &.positive {
+              color: green;
             }
+  
+            &.negative {
+              color: red;
+            }
+          }
         }
+      }
     }
-}
+  }
