--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -26,6 +26,32 @@
                 margin-bottom: 15px;
             }
         }
+
+        .teamContainer{
+            padding: 20px;
+            margin: 20px;
+            -webkit-box-shadow: 2px 4px 10px 1px rgba(0,0,0,0.47);
+            box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+
+            .teamTitle{
+                font-weight: 500;
+                color: gray;
+                margin-bottom: 15px;
+            }
+        }
+
+        .clientsContainer{
+            padding: 20px;
+            margin: 20px;
+            -webkit-box-shadow: 2px 4px 10px 1px rgba(0,0,0,0.47);
+            box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+
+            .clientsTitle{
+                font-weight: 500;
+                color: gray;
+                margin-bottom: 15px;
+            }
+        }
         
     }
 }
