--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -14,4 +14,54 @@
             margin-right: 20px;
         }
     }
+
+    .cellWithStatus{
+        padding: 5px;
+        border-radius: 5px;
+
+        &.active{
+            background-color: rgba(0, 128, 0, 0.09);
+            color: green;
+        }
+
+        &.passive{
+            background-color: rgba(207, 106, 11, 0.09);
+            color: orange;
+        }
+
+        &.pending{
+            background-color: rgba(179, 12, 12, 0.09);
+            color: red;
+        }
+    }
+}
+
+.cellAction{
+    display: flex;
+    padding: 10px;
+    gap: 20px;
+    align-items: center;
+    justify-content: space-between;
+    
+
+    .viewButton, .deleteButton{
+        cursor: pointer;
+        
+    }
+
+    .viewButtonIcon{
+        color: rgba(20, 182, 20, 0.74);
+
+        &:hover{
+            color: green;
+        }
+    }
+
+    .deleteButtonIcon{
+        color: rgb(241, 88, 88);
+
+        &:hover{
+            color: rgb(255, 0, 0);
+        }
+    }
 }
