--- a/src/pages/single/Single.scss
+++ b/src/pages/single/Single.scss
@@ -75,18 +75,20 @@
                 flex: 2;
             }
         }
-    }
 
-    .bottom{
-        padding: 20px;
-        border-radius: 10px;
-        -webkit-box-shadow: 2px 4px 10px 1px rgba(0,0,0,0.47);
-        box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+        .bottom{
+            padding: 20px;
+            border-radius: 10px;
+            margin: 10px 20px;
+            -webkit-box-shadow: 2px 4px 10px 1px rgba(0,0,0,0.47);
+            box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+        }
+    
+        .title{
+            font-size: 16px;
+            color: lightgray;
+            margin-bottom: 20px;
+        }
     }
-
-    .title{
-        font-size: 16px;
-        color: lightgray;
-        margin-bottom: 20px;
-    }
+    
 }
