--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -18,6 +18,9 @@
             align-items: center;
             border: 0.5px solid lightgray;
             padding: 3px;
+            border-radius: 10px;
+            width: 50%;
+            justify-content: space-between;
 
             input{
                 border: none;
