--- a/src/pages/new/New.scss
+++ b/src/pages/new/New.scss
@@ -56,6 +56,7 @@
                             border: none;
                             border-bottom: 1px solid gray;
                             outline: none;
+                            border-radius: 5px;
                         }
                     }
 
